@@ -1,3 +1,8 @@
+2003-08-28  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* dirfns.cc (Fls): Check EAGAIN to avoid losing output.
+	* toplev.cc (run_command_and_return_output): Likewise.
+
 2003-08-25  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* OPERATORS/op-str-s.cc, OPERATORS/op-str-m.cc: New files.
